playing around with .name-card width to fix scaling on mobile view

--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ body {
 }
 
 .section {
-    width: 100% !important;
+    width: 95% !important;
     position: absolute;
     left: 0;
     top: 0;
@@ -279,5 +279,4 @@ body {
 
 .name-card {
     height: 400px !important;
-    width: 90%;
 }
